# Slycot

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  MANIFEST.in  appveyor.yml  setup.py
conda-recipe/: meta.yaml
conda-recipe-openblas/: meta.yaml
slycot/: CMakeLists.txt  __init__.py  math.py  setup.py  slicot-sources.cmake  synthesis.py  transform.py
slycot/src/: analysis.pyf  math.pyf  synthesis.pyf
slycot/src/SLICOT/: AB13AD.f  AB13AX.f  AB13BD.f  AB13CD.f  AB13DX.f  MB03ND.f  MB03NY.f  TB01TD.f  TB05AD.f  TD04AD.f
slycot/tests/: CMakeLists.txt  test.py  test_ab13bd.py
travis/: conda-after_success.sh  conda-before_install.sh  conda-install.sh  conda-script.sh  conda-test.sh  plain-after_success.sh  plain-before_install.sh  plain-install.sh  plain-script.sh  plain-test.sh
