# CMakeLists.txt file for Slycot
# use in conjunction with scikit-build
#
# RvP, 180710


set(FSOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB01MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MA02AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03YT.f ${CMAKE_CURRENT_SOURCE_DIR}/src/NF01BW.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB10KD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB01ND.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MA02BD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03ZA.f ${CMAKE_CURRENT_SOURCE_DIR}/src/NF01BX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB10LD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB01OD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MA02BZ.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03ZD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/NF01BY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB10MD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB04MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MA02CD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04DD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB01BD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB10PD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB05MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MA02CZ.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04DI.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB01BX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB10QD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB05ND.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MA02DD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04DS.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB01BY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB10RD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB05OD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MA02ED.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04DY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB01DD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB10SD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB05PD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MA02FD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04GD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB01FY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB10TD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB05QD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MA02GD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04ID.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB01MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB10UD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB05RD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MA02HD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04IY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB02CX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB10VD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB05SD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MA02ID.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04IZ.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB02MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB10WD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB07MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MA02JD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04JD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB02MR.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB10YD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB07ND.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB01MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04KD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB02MS.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB10ZD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB08MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB01ND.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04LD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB02MT.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB10ZP.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB08MZ.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB01PD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB02MU.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB16AD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB08ND.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB01QD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04ND.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB02MV.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB16AY.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB08NX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB01RD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04NY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB02MW.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB16BD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB08NZ.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB01RU.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04OD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB02ND.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB16CD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB01RW.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04OW.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB02OD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB16CY.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09AX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB01RX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04OX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB02OU.f ${CMAKE_CURRENT_SOURCE_DIR}/src/select.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09BD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB01RY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04OY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB02OV.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SG02AD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09BX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB01SD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04PA.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB02OW.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SG03AD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09CD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB01TD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04PB.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB02OX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SG03AX.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09CX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB01UD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04PU.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB02OY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SG03AY.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09DD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB01UW.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04PY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB02PD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SG03BD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09ED.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB01UX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04QB.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB02QD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SG03BU.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09FD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB01VD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04QC.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB02RD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SG03BV.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09GD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB01WD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04QF.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB02RU.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SG03BW.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09HD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB01XD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04QU.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB02SD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SG03BX.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09HX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB01XY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04TB.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB03MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SG03BY.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09HY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB01YD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04TS.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB03MU.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/SLCT_DLATZM.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09ID.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB01ZD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04TT.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/SB03MV.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SLCT_ZLATZM.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09IX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02CD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04TU.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB03MW.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB01ID.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09IY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02CU.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04TV.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB03MX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB01IZ.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09JD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02CV.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04TW.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB03MY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB01KD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09JV.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02CX.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04TX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB03OD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB01LD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09JW.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02CY.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04TY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB03OR.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB01MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09JX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02DD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04UD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB03OT.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB01ND.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09KD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02ED.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04VD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB03OU.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB01PD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09KX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02FD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04VX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB03OV.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB01TD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02GD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04WD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB03OY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB01TY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AB09ND.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02HD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04WP.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB03PD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB01UD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AB13AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02ID.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04WR.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB03QD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB01VD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AB13AX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02JD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04WU.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB03QX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB01VY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AB13BD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02JX.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04XD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB03QY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB01WD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AB13CD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02KD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04XY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB03RD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB01XD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AB13DD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02MD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04YD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB03SD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB01XZ.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AB13DX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02ND.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04YW.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB03SX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB01YD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AB13ED.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02NY.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB04ZD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB03SY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB01ZD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AB13FD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02OD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB05MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB03TD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB03AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AB13MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02PD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB05MY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB03UD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB03AY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AB8NXZ.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02QD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB05ND.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB04AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AG07BD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02QY.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB05OD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04MR.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB04AY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AG08BD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02RD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB05OY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04MU.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB04BD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AG08BY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02RZ.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB3OYZ.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04MW.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB04BV.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AG08BZ.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02SD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MB3PYZ.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04MY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB04BW.f ${CMAKE_CURRENT_SOURCE_DIR}/src/AG8BYZ.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02SZ.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MC01MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04ND.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB04BX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/BB01AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02TD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MC01ND.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04NV.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB04CD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/BB02AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02TZ.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MC01OD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04NW.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TB05AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/BB03AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02UD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MC01PD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04NX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TC01OD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/BB04AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02UU.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MC01PY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04NY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TC04AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/BD01AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02UV.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MC01QD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04OD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TC05AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/BD02AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02VD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MC01RD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04OW.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TD03AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/DE01OD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02WD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MC01SD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04PD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TD03AY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/DE01PD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02XD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MC01SW.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04PX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TD04AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/delctg.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB02YD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MC01SX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04PY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TD05AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/DF01MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03MD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MC01SY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04QD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TF01MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/DG01MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03MY.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MC01TD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04QR.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TF01MX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/DG01ND.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03ND.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MC01VD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04QU.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TF01MY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/DG01NY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03NY.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MC01WD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04QY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TF01ND.f ${CMAKE_CURRENT_SOURCE_DIR}/src/DG01OD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03OD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MC03MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04RD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TF01OD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/DK01MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03OY.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MC03ND.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04RV.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TF01PD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/FB01QD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03PD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MC03NX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04RW.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TF01QD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/FB01RD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03PY.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MC03NY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04RX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TF01RD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/FB01SD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03QD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MD03AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB04RY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TG01AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/FB01TD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03QX.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MD03BA.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB06ND.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TG01AZ.f ${CMAKE_CURRENT_SOURCE_DIR}/src/FB01VD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03QY.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MD03BB.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB08CD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TG01BD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/FD01AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03RD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MD03BD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB08DD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TG01CD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/IB01AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03RX.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MD03BF.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB08ED.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TG01DD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/IB01BD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03RY.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MD03BX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB08FD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TG01ED.f ${CMAKE_CURRENT_SOURCE_DIR}/src/IB01CD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03SD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/MD03BY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB08GD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TG01FD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/IB01MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03TD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/NF01AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB08HD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TG01FZ.f ${CMAKE_CURRENT_SOURCE_DIR}/src/IB01MY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03TS.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/NF01AY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB08MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TG01HD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/IB01ND.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03UD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/NF01BA.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB08MY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TG01HX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/IB01OD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03VD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/NF01BB.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB08ND.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TG01ID.f ${CMAKE_CURRENT_SOURCE_DIR}/src/IB01OY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03VY.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/NF01BD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB08NY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TG01JD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/IB01PD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03WA.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/NF01BE.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB09MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/TG01WD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/IB01PX.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03WD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/NF01BF.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB10AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/UD01BD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/IB01PY.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03WX.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/NF01BP.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB10DD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/UD01CD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/IB01QD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03XD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/NF01BQ.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB10ED.f ${CMAKE_CURRENT_SOURCE_DIR}/src/UD01DD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/IB01RD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03XP.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/NF01BR.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB10FD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/UD01MD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/IB03AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03XU.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/NF01BS.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB10HD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/UD01MZ.f ${CMAKE_CURRENT_SOURCE_DIR}/src/IB03BD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03YA.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/NF01BU.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB10ID.f ${CMAKE_CURRENT_SOURCE_DIR}/src/UD01ND.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MA01AD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/MB03YD.f
  ${CMAKE_CURRENT_SOURCE_DIR}/src/NF01BV.f ${CMAKE_CURRENT_SOURCE_DIR}/src/SB10JD.f ${CMAKE_CURRENT_SOURCE_DIR}/src/UE01MD.f)

set(F2PYSOURCE ${CMAKE_CURRENT_SOURCE_DIR}/src/_wrapper.pyf)

configure_file(version.py.in version.py @ONLY)

set(PYSOURCE
  __init__.py analysis.py examples.py math.py synthesis.py
  transform.py ${CMAKE_CURRENT_BINARY_DIR}/version.py)

set(SLYCOT_MODULE "_wrapper")
set(GENERATED_MODULE
  ${CMAKE_CURRENT_BINARY_DIR}/${SLYCOT_MODULE}${PYTHON_EXTENSION_MODULE_SUFFIX})

add_custom_target(${SLYCOT_MODULE} ALL
  DEPENDS ${GENERATED_MODULE}
  )

add_custom_command(
  OUTPUT ${GENERATED_MODULE}
  COMMAND ${F2PY_EXECUTABLE} -c ${F2PYSOURCE} ${FSOURCES}
  )

install(FILES ${GENERATED_MODULE} DESTINATION ${PYTHON_RELATIVE_SITE_PACKAGES_DIR}/slycot)
install(FILES ${PYSOURCE} DESTINATION ${PYTHON_RELATIVE_SITE_PACKAGES_DIR}/slycot)

add_subdirectory(tests)
